package eapli.base.warehousemanagement;

public class Accessibility {

    private String accessibility;

    public Accessibility(String accessibility) {
        this.accessibility = accessibility;
    }
}
